@@ -15,6 +15,10 @@ See http://www.pserc.cornell.edu/matpower/ for more info.
 Changes since 4.1
 -----------------
 
+2/27/14
+    - Fixed bug in savecase() where the function name mistakenly
+      included the path when the FNAME input included a path.
+      
 2/6/14
     - Small tweak in connected_components() results in ~30x
       speedup for 62k bus network. (Reminder: Never access
